# hivemind

./: .dockerignore  .gitignore  .releaserc.json  ARCHITECTURAL_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  developer_guide.md  go.mod  go.sum  test_data_dir.sh
.github/workflows/: release.yml  (+4 more)
dashboards/: hivemind-node-monitoring.json  hivemind-overview.json
docs/: administration_guide.md  advanced_deployments.md  advanced_features_architecture.md  advanced_features_executive_summary.md  advanced_features_implementation_plan.md  advanced_features_timeline.md  api_reference.md  cicd_integration.md  cli_reference.md  cloud_integration.md  container_networking.md  container_networking_implementation.md  container_networking_scheduler.md  data_directory_configuration.md  deployment_guide.md  docker_runtime.md  final_project_summary.md  fixes_documentation_summary.md  health_monitoring.md  helm_integration.md  installation_guide.md  monitoring_observability.md  multi_tenancy.md  node_membership_protocol.md  node_membership_protocol_implementation.md  project_completion_report.md  project_summary.md  scheduler.md  security_features.md  service_discovery.md  troubleshooting_guide.md  user_guide.md  verification_report.md  volume_management.md
src/: app.rs  app_quota.rs  cicd.rs  cloud.rs  container_manager.rs  containerd_manager.rs  deployment.rs  health_monitor.rs  helm.rs  lib.rs  logging.rs  main.rs  membership.rs  monitoring.rs  network.rs  node.rs  observability.rs  proxy_server.rs  scheduler.rs  security.rs  service_discovery.rs  service_discovery_resilience.rs  storage.rs  storage.rs.bak  tenant.rs  tenant_quota.rs  threshold.rs  web.rs  youki_manager.rs
templates/: applications.html  base-applications.html  base-containers.html  base-dashboard.html  base-deploy.html  base-health.html  base-nodes.html  base-services.html  base-volumes.html  base.html  containers.html  dashboard.html  deploy.html  error.html  health.html  nodes.html  scale.html  services.html  tenants.html  volumes.html
test/: README.md
tests/: README.md  chaos_tests.rs  circuit_breaker_tests.rs  cluster_performance_tests.rs  container_runtime_tests.rs  coverage_reporter.rs  e2e_tests.rs  enhanced_chaos_tests.rs  health_monitor_tests.rs  integration_tests.rs  membership_integration_tests.rs  membership_tests.rs  network_enhanced_tests.rs  network_initialization_tests.rs  network_tests.rs  node_membership_integration_tests.rs  performance_tests.rs  proxy_server_tests.rs  scheduler_tests.rs  security_tests.rs  service_discovery_integration_tests.rs  service_discovery_tests.rs  tenant_enhanced_tests.rs  tenant_isolation_tests.rs  tenant_network_tests.rs  tenant_resource_tests.rs  tenant_scheduler_tests.rs  tenant_storage_isolation_tests.rs  tenant_tests.rs  test_runner.rs  unit_tests.rs  volume_tests.rs
(+89 files in other folders)
