[package]
name = "hivemind"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
rusqlite = { version = "0.28", features = ["bundled"] }
tera = "1.18"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
containerd-client = "0.2"
tonic = "0.8"
prost = "0.11"
tokio-stream = "0.1"
serde_qs = "0.12"
prost-types = "0.11"
regex = "1.5"

hyper = { version = "0.14", features = ["full"] }
