[package]
name = "hivemind"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
bincode = "1.3"
rusqlite = { version = "0.28", features = ["bundled"] }
tera = "1.18"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
tonic = "0.8"
prost = "0.11"
tokio-stream = "0.1"
serde_qs = "0.12"
prost-types = "0.11"
regex = "1.5"
hyper = { version = "0.14", features = ["full"] }
base64 = "0.21.4"
futures = "0.3"
oci-spec = "0.6.0"
derive-getters = "0.5.0"
get_if_addrs = "0.5.3"
trust-dns-server = "0.23.2"
trust-dns-proto = "0.23.2"
async-trait = "0.1"
ipnetwork = "0.20.0"
containerd-client = { version = "0.4", optional = true }

[features]
default = ["containerd"]
containerd = []
test = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.3"
mockall = "0.11"
proptest = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
async-trait = "0.1"

